--- a/src/Base.scss
+++ b/src/Base.scss
@@ -22,6 +22,12 @@ $font-display: "Josefin Sans", sans-serif;
   box-sizing: inherit;
 }
 
+img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
