--- a/src/components/Stories.scss
+++ b/src/components/Stories.scss
@@ -2,10 +2,7 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(
-      rgba($color-primary, 0.5),
-      rgba($color-primary, 0.5)
-    );
+    background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url('../img/back.jpg');
 
     display: grid;
     grid-template-rows: repeat(6, 1fr);
